# vstable

./: .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  docker-compose.yml  electron-vite.config.ts  package-lock.json  package.json  refactoring_plan.md  tsconfig.json  vitest.config.ts
.agents/skills/pull-request/: SKILL.md
.agents/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
backend/: AGENTS.md  go.mod  go.sum  main.go
backend/api/: vstable.proto
backend/scripts/: gen_proto.sh
docs/: README_CN.md
frontend/: AGENTS.md  biome.json  docker-compose.yml  electron-vite.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: AGENTS.md  advanced.spec.ts  complex-scenarios.spec.ts  connection.spec.ts  crud.spec.ts  data-grid.spec.ts  fixture.ts  global-setup.ts  global-teardown.ts  schema.spec.ts  workspace-persistence.spec.ts
frontend/scripts/: build-sidecar.js
frontend/src/: App.tsx  env.d.ts  index.css  index.html
frontend/tauri/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
frontend/tauri/capabilities/: default.json
frontend/tauri/icons/: icon.icns
frontend/tauri/permissions/: shell.json
frontend/tauri/src/: commands.rs  error.rs  grpc.rs  lib.rs  main.rs  utils.rs
requirement/: tauri-migration.md  todo.md  v1.md
src/core/: factory.ts
src/infrastructure/: db-manager.test.ts  db-manager.ts  logger.ts
src/main/: db-manager.ts  index.ts  store.ts
src/preload/: index.ts
src/renderer/: App.test.tsx  App.tsx  env.d.ts  index.css  index.html
(+164 files in other folders)
